--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "sha256": "^0.2.0"
+  }
 }
